--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "test": "(npmts)"
   },
   "devDependencies": {
+    "qenv": "^1.1.7",
     "tapbundle": "^1.0.13"
   },
   "dependencies": {
+    "apiai": "^4.0.3",
     "typings-global": "^1.0.16"
   }
 }
